--- a/assets/views/actions/_actions.scss
+++ b/assets/views/actions/_actions.scss
@@ -36,6 +36,10 @@
  					padding: $spacing-21;
 				}
 
+				.do, .dont {
+					height: 230px;
+				}
+
 				.do {
 					margin-bottom: $spacing-21;
 
