--- a/assets/styles/template/_nav.scss
+++ b/assets/styles/template/_nav.scss
@@ -40,8 +40,6 @@ nav {
     }
 }
 
-.nav-absolute-bottom {
-	@include position(absolute, $right: 0, $bottom: $spacing-55, $left: 0);
-
-	margin: 0 auto;
+.nav-index {
+    margin-top: $spacing-55;
 }
